# Jaguar

./: .gitignore  Cargo.toml  README.md  TODO.md  TODO.txt  makefile
src/: main.rs
src/backend/: bundle.rs  codegen.rs  codegen.rsHyr5JL.bck  compile_error.rs  context.rs  function.rs  mod.rs  parser.rs  ttype.rs  type_table.rs  var.rs  var.s  var_table.rs
src/frontend/: lexer.rs
std/: claw.c  claw.h
std/trn0/: stdio.asm
tests/: main  main.c  main.jr  string.h  test.jr.h  test01.jr  test02.jr  test03.jr  test04.jr  test05.jr  test06.jr  test07.jr  test07.jr~  tstd.h  tstd.jr
tests/c/: struct.c
tests/lib/: array.h  array.jr  mem.jr  string.jr  string.jr.h  vec.jr
