[package]
name = "jagc"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"      # for lexing if needed
serde = { version = "1.0", features = ["derive"] }  # Optional, for serialization
serde_json = "1.0"  # Optional, for working with JSON
colored = "2"
clap = {version = "4", features = ["derive"]}

[dev-dependencies]
